BuildProgram deletes the compiled program if requested
BuildProgram can also run a program that it builds. This is the default
behavior. Therefore, in some situations, you don't want the actual
binary/compiled program, you just want to see the result of some operation
and you will later delete the compiled file.

With this commit, BuildProgram has a new `--deletecompiled' option. With
this option, when the built program is run (when `--onlybuild' isn't
called), BuildProgram will delete the compiled binary.

Two other minor corrections:

 - The number of threads are irrelevant to BuildProgram, so it is now a
   hidden option for it.

 - The "Single row calculations" option group title in CosmicCalculator was
   changed to "Specific calculation" to fit the terminology of the book and
   code.

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   BuildProgram: The new `--la' option allows the identification of a
   different Libtool `.la' file for Libtool linking information.
 
+  BuildProgram: The new `--deletecompiled' option will delete the compiled
+  program after running it.
+
   CosmicCalculator: all the various cosmological calculations can now be
   requested individually in one line with a specific option added for each
   calculation (for example `--age' or `--luminositydist' for the age of the
