Library table writing functions don't delete
Until now the table writing functions had a `dontdelete' argument. This
argument was in charge of letting the function know what to do with the
output file if it already existed. But ultimately, this job (deciding what
to do with the output file) is a choice at another level. It would thus
make it hard to write multiple FITS tables to separate extensions.

So with this commit, the choice of what to do with the output file is left
to the caller of the function. If the output is a FITS file and it already
exits, they will write the output as a new extension and if it is a text
file, it will abort with an error (it is the caller's responsibility to
check before calling this function).

With this change, MakeCatalog can now write its two outputs in separate
extensions of a single FITS file. Also in this commit, the options relating
to output catalog columns were grouped into related contexts to make it
easier to find them.

--- a/NEWS
+++ b/NEWS
@@ -72,6 +72,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   `gal_fits_key_img_blank': returns the value that must be used in the
   BLANK keyword for the given type as defined by the FITS standard.
 
+  `gal_txt_write' and `gal_fits_tab_write' now accept an extension name as
+  argument to allow a name for the FITS extension they write.
+
 ** Removed features
 
   MakeCatalog: `--zeropoint' option doesn't have a short option name any
@@ -88,19 +91,27 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   CosmicCalculator: The redshift is no longer mandatory. When no redshift
   is given, it will only print the input parameters (cosmology) and abort.
 
+  MakeCatalog: when the output is a FITS file, the two object and clumps
+  catalogs will no longer
+
   `gal_binary_fill_holes' now accepts a `connectivity' and `maxsize'
   argument to specify the connectivity of the holes and the maximum size of
   acceptable holes to fill.
-
-  `gal_tile_block_write_const_value' and `gal_tile_full_values_write' now
-  accept a new `withblank' option to set all pixels that are blank in the
-  tile's block to be blank in the check image.
 
   `gal_fits_img_read' and `gal_fits_img_read_to_type' now also read the WCS
   structure of the extension/HDU in a FITS file and have two extra
   arguments: `hstartwcs' and `hendwcs'. With these options it is possible
   to limit the range of header keywords to read the WCS, similar to how
   they are used in `gal_wcs_read'.
+
+  `gal_txt_write', `gal_table_write_log', `gal_fits_tab_write' and
+  `gal_txt_write' don't have the `dontdelete' argument any more. The action
+  they take if the file already exists depends on the file: for FITS, a new
+  extension will be added and for text, they will abort with an error.
+
+  `gal_tile_block_write_const_value' and `gal_tile_full_values_write' now
+  accept a new `withblank' option to set all pixels that are blank in the
+  tile's block to be blank in the check image.
 
   `gal_wcs_pixel_area_arcsec2' will return NaN (instead of aborting) when
   input is unreasonable (not two dimensions or not in units of degrees).
