--- a/NEWS
+++ b/NEWS
@@ -45,6 +45,11 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   `--geora', `--geodec', `--clumpsra', `--clumpsdec', `--clumpsgeora',
   `--clumpsgeodec'. No alias is currently defined for the latter group.
 
+  MakeCatalog: The new `--uprange' option allows you to specify a range for
+  the random values around each object. This is useful when the noise
+  properies of the dataset vary gradually and sampling from the whole
+  dataset might produce biased results.
+
   NoiseChisel: with the new `--widekernel' option it is now possible to use
   a wider kernel to identify which tiles contain signal. The rest of the
   steps (identifying the quantile threshold on the selected tiles and etc)
@@ -93,8 +98,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   MakeCatalog: when the output is a FITS file, the two object and clumps
   catalogs will be stored as multiple extensions of a single file. Until
-  now, two separate FITS files would be created. Plain text outputs will be
-  the same as before (two files).
+  now, two separate FITS files would be created. Plain text outputs are the
+  same as before (two files will be created).
 
   `gal_binary_fill_holes' now accepts a `connectivity' and `maxsize'
   argument to specify the connectivity of the holes and the maximum size of
@@ -137,6 +142,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   CFITSIO 3.42 and libcurl crash at Gnuastro configure time (bug #52152).
 
   MakeCatalog crash in upper-limit with full size label (bug #52281).
+
+
 
 
 
