Checks for GNU Libtool, allowing libtool or glibtool
Until now, Gnuastro assumed that the `libtool' executable is GNU Libtool,
so it would use its options and etc. But thanks to Alan Lefor, I found out
that on Mac systems, the `libtool' executable may not be GNU Libtool, but
Mac's own implementation of it. Mac's implementation doesn't support long
options or the special behaviors we need in BuildProgram. I then found out
that people commonly call GNU Libtool on a Mac with `glibtool'.

With this commit, at configure time, it will be checked if the `libtool'
executable is GNU or not. If it isn't, or if there isn't any `libtool'
executable at all, it will check for `glibtool'. If `glibtool' also isn't
present, then  In any case, BuildProgram will use the proper executable
name.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -2607,18 +2607,25 @@ take effect.
 @cindex GNU Libtool
 GNU Libtool is a program to simplify managing of the libraries to build an
 executable (program). It is used by @ref{BuildProgram} in Gnuastro to help
-you easily link to all the necessary libraries that Gnuastro's library
-depends on. Libtool is a low-level program that is probably already present
-on your system (and in your operating system package manager). However, if
-you want to install it's latest version from source, please visit its
+you when you are writing your own C code. It will enable easy linking to
+all the necessary libraries that Gnuastro's library depends on. If GNU
+Libtool isn't present on your system, then BuildProgram won't be built or
+installed. The configure script will look for GNU Libtool through the
+following executable names in your search path @command{libtool} (if it is
+GNU's implementation) or @command{glibtool}.
+
+Libtool is a low-level program that is probably already present on your
+system (and in your operating system package manager). However, if you want
+to install it's latest version from source, please visit its
 @url{https://www.gnu.org/software/libtool/, webpage}.
 
-Gnuastro's tarball ships with Libtool and it is extensively used during its
-building and installing. Therefore, you can easily build Gnuastro even if
-you don't have Libtool installed on your system. However, this internal
-Libtool does not get installed. Hence, if you want to use the installed
-BuildProgram to compile and link your own source code later, you need to
-have Libtool on your system (independent of Gnuastro).
+Gnuastro's tarball ships with an internal implementation of GNU Libtool and
+it is extensively used while Gnuastro is being built and
+installed. Therefore, you can still build Gnuastro even if you don't have
+GNU Libtool installed on your system. However, this internal Libtool does
+not get installed. Hence, if you want to use BuildProgram to compile and
+link your own C source code later, you need to have GNU Libtool available
+on your system (independent of Gnuastro).
 
 @item libgit2
 @cindex Git
@@ -17256,6 +17263,14 @@ libraries and programs when you run @code{make}). So in the future, if
 Gnuastro's prerequisite libraries change or other libraries are added, you
 don't have to worry, you can just run BuildProgram and internal linking
 will be done correctly.
+
+@cartouche
+@noindent
+@strong{BuildProgram requires GNU Libtool:} BuildProgram depends on GNU
+Libtool, therefore if GNU Libtool isn't available at Gnuastro's configure
+time, BuildProgram will not be built or installed. Please see @ref{Optional
+dependencies} for more information.
+@end cartouche
 
 @menu
 * Invoking astbuildprog::       Options and examples for using this program.
